# transcription-vae

./: .gitignore  README.md  VAE-cCREs.ipynb  ccre_df.tsv  ccre_vae_run_v2.py  config.yaml  data_matrix_generator_v3.py  encode_metadata.tsv  encode_metadata_munging.ipynb  encode_metadata_parser.py  info.txt  interactive_umap_visualization.ipynb  interactive_umap_visualization.py  lasso.ipynb  plot_avg_profiles.py  pyproject.toml  snakefile  snakefile_1  snakefile_2  umap_df.tsv
results/aggregated/: bigwiginfo.txt
src/transcription_vae/: __init__.py
